--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Elm Tutorial",
   "main": "index.js",
   "scripts": {
+    "start": "node api.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -15,5 +16,8 @@
   "bugs": {
     "url": "https://github.com/samjonester/elm-tutorial/issues"
   },
-  "homepage": "https://github.com/samjonester/elm-tutorial#readme"
+  "homepage": "https://github.com/samjonester/elm-tutorial#readme",
+  "dependencies": {
+    "json-server": "^0.8.21"
+  }
 }
